--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,9 @@
 @import 'bootstrap/less/bootstrap';
 /* Space out content a bit */
 
+@navbar-total-height: @navbar-height+(@navbar-padding-vertical * 2);
+@footer-total-height: @navbar-total-height / 2;
+
 @font-face {
     font-family: 'linux_libertine_displayRg';
     src: url('../fonts/linlibertine_dr-webfont.eot');
@@ -31,13 +34,13 @@ div#template.flower-template{
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0px 0 -60px;
+  margin: 0px 0 -@footer-total-height;
   /* Pad bottom by footer height */
-  padding: 96px 0 96px;
+  padding: @navbar-total-height 0 @footer-total-height;
 }
 footer.footer{
-    background: rgba(0, 0, 0, 0.4);
-    height: 60px;
+    background: @navbar-default-bg;
+    height: @footer-total-height;
 }
 div.parallax{
     width:110%;
@@ -82,7 +85,6 @@ div[class^="c-"] .flowers_container{
     left:0px;
     bottom:100px;
     z-index:2;
-
 }
 div[class^="c-"] .background_container{
     float:left;
@@ -198,7 +200,7 @@ div.c-back .background_container{
     top:173px;
     width:100%;
     left:-43px;
-    font-size:23%;
+    font-size:22.8%;
     min-width: 220px;
     transform: rotate(288deg);
 }
@@ -220,11 +222,12 @@ pre{
     color:#fff;
     padding: 1.5em;
     background: @navbar-default-bg;
-    border-radius:@border-radius-base;
     position: relative;
     overflow: hidden;
     transition: all 0.3s linear;
-    margin-bottom:1em;
+}
+#articles article:hover{
+
 }
 #articles article .time-border{
     float: right;
@@ -240,11 +243,11 @@ pre{
     margin-bottom: 1.5em;
 }
 #articles article .body{
-    display:none;
+    display: none;
 }
 
 #articles article:hover .body{
-    display:block;
+    display: block;
 }
 #articles article:hover .body-snippet{
     display:none;
@@ -266,7 +269,6 @@ pre{
     top:0em;
     left:0em;
     z-index: 0;
-    border-radius:@border-radius-base;
     opacity:0.5;
     filter: blur(0);
     transition: all 0.3s linear;
@@ -284,4 +286,211 @@ pre{
 #articles article.with-photo:hover .a-content{
     opacity:1;
     filter: blur(0px);
+}
+.navbar-toggle {
+    position: relative;
+    float: right;
+    margin-right: 0px;
+    padding: 9px 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: @navbar-total-height;
+    background-color: transparent;
+    background-image: none;
+    border: none;
+    border-radius: 0;
+}
+.navbar-default{
+    font-size: 16px;
+}
+.navbar-default .navbar-toggle{
+    color:#445f32;
+}
+.navbar-default .navbar-toggle .icon-bar{
+    background-color:#fff;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+    background-color:#303127;
+}
+
+/*----*/
+.timeline {
+    list-style: none;
+    padding: 20px 0 20px;
+    position: relative;
+}
+
+.timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 2px;
+    background-color: #445f32;
+    left: 50%;
+    margin-left: -1px;
+}
+
+.timeline > li {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.timeline > li:before, .timeline > li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline > li:after {
+    clear: both;
+}
+
+.timeline > li:before, .timeline > li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline > li:after {
+    clear: both;
+}
+
+.timeline > li > .timeline-panel {
+    width: 46%;
+    float: left;
+    border: 1px solid #445f32;
+    padding: 10px;
+    position: relative;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+    position: absolute;
+    top: 26px;
+    right: -15px;
+    display: inline-block;
+    border-top: 15px solid transparent;
+    border-left: 15px solid #ccc;
+    border-right: 0 solid #ccc;
+    border-bottom: 15px solid transparent;
+    content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    content: " ";
+}
+
+.timeline > li > .timeline-badge {
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 1em;
+    vertical-align: middle;
+    padding-top: 1px;
+    text-align: center;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    margin-left: -15px;
+    background-color: #445f32;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+    float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+}
+
+.timeline-badge.primary {
+    background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+    background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+    background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+    background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+    background-color: #5bc0de !important;
+}
+
+.timeline-title {
+    margin-top: 0;
+    color: inherit;
+}
+
+.timeline-body > p, .timeline-body > ul {
+    margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+    margin-top: 5px;
+}
+
+@media (max-width: 767px) {
+    ul.timeline:before {
+        left: 40px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+
+    ul.timeline > li > .timeline-badge {
+        left: 15px;
+        margin-left: 0;
+        top: 16px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        float: right;
+    }
+
+    ul.timeline > li > .timeline-panel:before {
+        border-left-width: 0;
+        border-right-width: 15px;
+        left: -15px;
+        right: auto;
+    }
+
+    ul.timeline > li > .timeline-panel:after {
+        border-left-width: 0;
+        border-right-width: 14px;
+        left: -14px;
+        right: auto;
+    }
 }
