--- a/app/about.jade
+++ b/app/about.jade
@@ -10,8 +10,9 @@ html.no-js(lang='en')
         include modules/header
 
         #wrap
-            div.container.who-cont
-                .row#who
+            .container
+                .row#about
+
 
 
         include modules/footer
