--- a/app/index.jade
+++ b/app/index.jade
@@ -11,7 +11,7 @@ html.no-js(lang='en')
 
         #wrap
             div.container.news-cont
-                .ul#articles.timeline
+                ul#articles.timeline
 
 
         include modules/footer
