--- a/app/modules/templates.jade
+++ b/app/modules/templates.jade
@@ -1,21 +1,58 @@
 .templates
 
     script(type="text/x-handlebars-template")#article_template
-        li(class="{{class}}")
+        li(class="{{class}}").clearfix
             .timeline-badge
                 i(class="{{icon}}")
-              article.timeline-panel
-                .timeline-heading
-                  h2.timeline-title {{{title}}}
-                  .time-border
-                    i.fa.fa-calendar
-                    time(pubdate="pubdate", title="{{ago}}") &nbsp;{{pubdate}}
-                .timeline-body
-                    .body-snippet
-                        {{{body_snippet}}}
-                    .body
-                        {{{body}}}
-                .bk-image
+            .timeline-panel
+                article
+                    .timeline-heading
+                      h2.timeline-title {{{title}}}
+                      .time-border
+                        i.fa.fa-calendar
+                        time(pubdate="pubdate", title="{{ago}}") &nbsp;{{pubdate}}
+                    .timeline-body
+                        .body-snippet
+                            {{{body_snippet}}}
+                        .body
+                            {{{body}}}
+                    .bk-image
+
+        script(type="text/x-handlebars-template")#profile_template
+            .col-xs-12.col-sm-6.col-md-6(profile="http://microformats.org/wiki/hcard", class="vcard")
+                .well.well-sm
+                    .row
+                      .col-sm-6.col-md-4
+                        img.img-rounded.img-responsive(src='http://placehold.it/380x500', alt='')
+                      .col-sm-6.col-md-8
+                        h4
+                          | {{name}}
+                        small
+                          cite(title="{{city}}")
+                            | {{city}}
+                            i.glyphicon.glyphicon-map-marker
+                        p
+                          i.glyphicon.glyphicon-envelope
+                          | {{email}}
+                          br
+                          i.glyphicon.glyphicon-globe
+                          a(href="{{url}}") {{url}}
+                          br
+                          i.glyphicon.glyphicon-gift
+                          | {{birthday}}
+                        //
+                           Split button
+                        .btn-group
+                          button.btn.btn-primary(type='button')
+                            | Social
+                          button.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown')
+                            span.caret
+                            span.sr-only Social
+                          ul.dropdown-menu(role='menu')
+                            {{#each social}}
+                            li
+                              a(href="{{this.link}}") {{this.name}}
+                            {{/each}}
 
     script(type="text/x-handlebars-template")#flower_template
         .flower-template
