--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,6 +4,11 @@
 @navbar-total-height: @navbar-height+(@navbar-padding-vertical * 2);
 @footer-total-height: @navbar-total-height / 2;
 
+.navbar-nav > li > a{
+    height: @navbar-height+(@navbar-padding-vertical * 2);
+    padding-top: @navbar-padding-vertical * 2;
+}
+
 @font-face {
     font-family: 'linux_libertine_displayRg';
     src: url('../fonts/linlibertine_dr-webfont.eot');
@@ -221,10 +226,10 @@ pre{
 #articles article{
     color:#fff;
     padding: 1.5em;
-    background: @navbar-default-bg;
     position: relative;
     overflow: hidden;
     transition: all 0.3s linear;
+    border-radius: @border-radius-base;
 }
 #articles article:hover{
 
@@ -235,6 +240,7 @@ pre{
     bottom:1em;
     right:1em;
     font-family:@font-family-sans-serif;
+    font-size:small;
 }
 #articles article header h1{
     margin-top:0px;
@@ -272,6 +278,7 @@ pre{
     opacity:0.5;
     filter: blur(0);
     transition: all 0.3s linear;
+    border-radius: @border-radius-base;
 }
 #articles article.with-photo .a-content{
     transition: all 0.3s linear;
@@ -313,7 +320,11 @@ pre{
     background-color:#303127;
 }
 
-/*----*/
+//
+// took from http://bootsnipp.com/snippets/featured/timeline-responsive
+//
+
+
 .timeline {
     list-style: none;
     padding: 20px 0 20px;
@@ -326,7 +337,7 @@ pre{
     position: absolute;
     content: " ";
     width: 2px;
-    background-color: #445f32;
+    background-color: fade(#445f32, 25%);
     left: 50%;
     margin-left: -1px;
 }
@@ -355,46 +366,46 @@ pre{
 }
 
 .timeline > li > .timeline-panel {
-    width: 46%;
+    width: 46.5%;
     float: left;
-    border: 1px solid #445f32;
-    padding: 10px;
+    border-right: 3px solid #445f32;
     position: relative;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    border-radius: @border-radius-large;
+    background: @navbar-default-bg;
 }
 
-.timeline > li > .timeline-panel:before {
+.timeline>li>.timeline-panel:before {
     position: absolute;
-    top: 26px;
-    right: -15px;
+    top: 20px;
+    right: -10px;
     display: inline-block;
-    border-top: 15px solid transparent;
-    border-left: 15px solid #ccc;
-    border-right: 0 solid #ccc;
-    border-bottom: 15px solid transparent;
+    border-top: 10px solid transparent;
+    border-left: 10px solid #445f32;
+    border-right: 0 solid #445f32;
+    border-bottom: 10px solid transparent;
     content: " ";
 }
 
-.timeline > li > .timeline-panel:after {
+.timeline>li>.timeline-panel:after {
     position: absolute;
-    top: 27px;
-    right: -14px;
+    top: 21px;
+    right: -9px;
     display: inline-block;
-    border-top: 14px solid transparent;
-    border-left: 14px solid #fff;
-    border-right: 0 solid #fff;
-    border-bottom: 14px solid transparent;
+    border-top: 9px solid transparent;
+    border-left: 9px solid #445f32;
+    border-right: 0 solid #445f32;
+    border-bottom: 9px solid transparent;
     content: " ";
 }
 
-.timeline > li > .timeline-badge {
+.timeline>li>.timeline-badge {
     color: #fff;
     width: 30px;
     height: 30px;
     line-height: 30px;
     font-size: 1em;
     vertical-align: middle;
-    padding-top: 1px;
     text-align: center;
     position: absolute;
     top: 16px;
@@ -406,44 +417,26 @@ pre{
     border-top-left-radius: 50%;
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
-
 .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
+    border-right: none;
+    border-left: 3px solid #445f32;
 }
 
 .timeline > li.timeline-inverted > .timeline-panel:before {
     border-left-width: 0;
-    border-right-width: 15px;
-    left: -15px;
+    border-right-width: 10px;
+    left: -10px;
     right: auto;
 }
 
 .timeline > li.timeline-inverted > .timeline-panel:after {
     border-left-width: 0;
-    border-right-width: 14px;
-    left: -14px;
+    border-right-width: 9px;
+    left: -9px;
     right: auto;
-}
-
-.timeline-badge.primary {
-    background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-    background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-    background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-    background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-    background-color: #5bc0de !important;
 }
 
 .timeline-title {
@@ -459,38 +452,71 @@ pre{
     margin-top: 5px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767px){
     ul.timeline:before {
-        left: 40px;
+        left: 5%;
     }
 
-    ul.timeline > li > .timeline-panel {
-        width: calc(100% - 90px);
-        width: -moz-calc(100% - 90px);
-        width: -webkit-calc(100% - 90px);
+    ul.timeline>li>.timeline-panel {
+        border-right:none !important;
+        border-left: 3px solid #445f32;
+        width: 90%;
     }
 
-    ul.timeline > li > .timeline-badge {
-        left: 15px;
-        margin-left: 0;
+    ul.timeline>li>.timeline-badge {
+        left: 5%;
+        margin-left: -15px;
         top: 16px;
     }
 
-    ul.timeline > li > .timeline-panel {
+    ul.timeline>li>.timeline-panel {
         float: right;
     }
 
-    ul.timeline > li > .timeline-panel:before {
+    ul.timeline>li>.timeline-panel:before {
         border-left-width: 0;
-        border-right-width: 15px;
-        left: -15px;
+        border-right-width: 10px;
+        left: -10px;
         right: auto;
     }
 
-    ul.timeline > li > .timeline-panel:after {
+    ul.timeline>li>.timeline-panel:after {
         border-left-width: 0;
-        border-right-width: 14px;
-        left: -14px;
+        border-right-width: 9px;
+        left: -9px;
         right: auto;
     }
+}
+
+@media (max-width: 568px){
+    ul.timeline:before {
+        display:none;
+    }
+
+    ul.timeline>li>.timeline-panel, ul.timeline>li>.timeline-panel.timeline-inverted {
+        width: 100%;
+        border:none !important;
+    }
+
+    ul.timeline>li>.timeline-badge {
+        display:none;
+    }
+
+    ul.timeline>li>.timeline-panel {
+        float: right;
+    }
+
+    ul.timeline>li>.timeline-panel:before {
+        display:none;
+    }
+
+    ul.timeline>li>.timeline-panel:after {
+        display:none;
+    }
+}
+
+.vcard small {
+    display: block;
+    line-height: 1.428571429;
+    color: #999;
 }
