--- a/app/modules/scripts.jade
+++ b/app/modules/scripts.jade
@@ -20,6 +20,7 @@ script(src='scripts/vendor/handlebars.runtime-v1.3.0.js')
 // endbuild
 
 // build:js scripts/main.js
+script(src='scripts/config.js')
 script(src='scripts/main.js')
 // endbuild
 
