--- a/app/about.jade
+++ b/app/about.jade
@@ -10,10 +10,7 @@ html.no-js(lang='en')
         include modules/header
 
         #wrap
-            .container
-                .row#about
-
-
+            .container#about
 
         include modules/footer
 
