--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -223,13 +223,16 @@ pre{
     border:none !important;
     box-shadow: inset 0px 5px 15px rgba(0,0,0,0.3);
 }
-#articles article{
+#articles article, .profile .well{
     color:#fff;
     padding: 1.5em;
     position: relative;
     overflow: hidden;
     transition: all 0.3s linear;
     border-radius: @border-radius-base;
+    background: @navbar-default-bg;
+    border:none;
+    box-sizing: border-box;
 }
 #articles article:hover{
 
@@ -263,9 +266,8 @@ pre{
 }
 #articles article:hover{
     background:#2e2925;
-
 }
-#articles article.with-photo .bk-image{
+#articles article.with-photo .bk-image, .profile.with-photo .bk-image{
     background-size:cover;
     background-repeat:no-repeat;
     background-position: center center;
@@ -279,8 +281,16 @@ pre{
     filter: blur(0);
     transition: all 0.3s linear;
     border-radius: @border-radius-base;
+    overflow: hidden;
 }
-#articles article.with-photo .a-content{
+.profile.with-photo .bk-image{
+    opacity:0.1;
+    filter: blur(16px);
+}
+.profile{
+    margin-top: 20px;
+}
+#articles article.with-photo .a-content, .profile.with-photo .a-content{
     transition: all 0.3s linear;
     opacity:0.7;
     position: relative;
@@ -290,7 +300,7 @@ pre{
     opacity:0.3;
     filter: blur(16px);
 }
-#articles article.with-photo:hover .a-content{
+#articles article.with-photo:hover .a-content, .profile.with-photo:hover .a-content{
     opacity:1;
     filter: blur(0px);
 }
@@ -338,6 +348,7 @@ pre{
     content: " ";
     width: 2px;
     background-color: fade(#445f32, 25%);
+    background: linear-gradient(to bottom, rgba(68,95,50,0) 0%,rgba(68,95,50,0.14) 8%,rgba(68,95,50,0.15) 66%,rgba(68,95,50,0) 100%); /* W3C */
     left: 50%;
     margin-left: -1px;
 }
@@ -372,7 +383,6 @@ pre{
     position: relative;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     border-radius: @border-radius-large;
-    background: @navbar-default-bg;
 }
 
 .timeline>li>.timeline-panel:before {
