--- a/app/modules/header.jade
+++ b/app/modules/header.jade
@@ -9,7 +9,7 @@ header.header
 					span.icon-bar
 
 				a(href='/').navbar-brand
-					img(src='/img/logo.png', srcset='/img/logo.png 1x, /img/logo.png@2x 2x')
+					img(src='/img/logo.png')
 					h1 Code Garden
 
 			#collapse.collapse.navbar-collapse
