--- a/app/modules/scripts.jade
+++ b/app/modules/scripts.jade
@@ -15,7 +15,6 @@ script(src='bower_components/bootstrap/js/tab.js')
 script(src='scripts/vendor/parse-1.2.16.min.js')
 script(src='scripts/vendor/jquery.arctext.js')
 script(src='scripts/vendor/jquery.parallax.min.js')
-script(src='scripts/vendor/srcset.min.js')
 script(src='scripts/vendor/handlebars.runtime-v1.3.0.js')
 // endbuild
 
@@ -25,6 +24,7 @@ script(src='scripts/main.js')
 // endbuild
 
 script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js')
+script(src='//cdnjs.cloudflare.com/ajax/libs/retina.js/1.0.1/retina.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/marked/0.3.0/marked.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js')
