my first commit

--- a/app/modules/scripts.jade
+++ b/app/modules/scripts.jade
@@ -16,6 +16,8 @@ script(src='scripts/vendor/parse-1.2.16.min.js')
 script(src='scripts/vendor/jquery.arctext.js')
 script(src='scripts/vendor/jquery.parallax.min.js')
 script(src='scripts/vendor/handlebars.runtime-v1.3.0.js')
+
+
 // endbuild
 
 // build:js scripts/main.js
@@ -31,3 +33,4 @@ script(src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.string/2.3.3/underscore.string.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js')
+script(src='//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js')
