--- a/app/modules/templates.jade
+++ b/app/modules/templates.jade
@@ -6,6 +6,7 @@
                 i(class="{{icon}}")
             .timeline-panel
                 article
+                    .gesture-bk
                     .timeline-heading
                       h2.timeline-title {{{title}}}
                       .time-border
@@ -20,6 +21,7 @@
 
     script(type="text/x-handlebars-template")#profile_template
         .row.profile
+            .gesture-bk
             .col-xs-12.col-sm-12.col-md-12(profile="http://microformats.org/wiki/hcard", class="vcard")
                 .well.well-sm
                     .row
