--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -213,6 +213,26 @@ pre{
     border:none !important;
     box-shadow: inset 0px 5px 15px rgba(0,0,0,0.3);
 }
+.gesture-bk{
+    position: fixed;
+    left: 0px;
+    display: block;
+    right: 0px;
+    top: @navbar-total-height;
+    height:0px;
+    opacity: 0;
+    overflow: hidden;
+    background: transparent url(../img/gestures.png) no-repeat top center;
+    z-index: 9999;
+    width: 100%;
+    background-size: contain;
+    transition: opacity 0.5s linear;
+}
+.gestures .gesture-bk{
+    opacity: 0.9;
+    height: 100%;
+    display: block;
+}
 #articles article, .profile .well{
     color:#fff;
     padding: 1.5em;
@@ -224,9 +244,7 @@ pre{
     border:none;
     box-sizing: border-box;
 }
-#articles article:hover{
 
-}
 #articles article .time-border{
     float: right;
     position:absolute;
@@ -245,16 +263,16 @@ pre{
     display: none;
 }
 
-#articles article:hover .body{
+#articles article.focused .body{
     display: block;
 }
-#articles article:hover .body-snippet{
+#articles article.focused .body-snippet{
     display:none;
 }
 #articles article p{
     font-family:@font-family-sans-serif;
 }
-#articles article:hover{
+#articles article.focused{
     background:#2e2925;
 }
 #articles article.with-photo .bk-image, .profile.with-photo .bk-image{
@@ -286,11 +304,11 @@ pre{
     position: relative;
     z-index: 1;
 }
-#articles article.with-photo:hover .bk-image{
+#articles article.with-photo.focused .bk-image{
     opacity:0.3;
     filter: blur(16px);
 }
-#articles article.with-photo:hover .a-content, .profile.with-photo:hover .a-content{
+#articles article.with-photo.focused .a-content, .profile.with-photo.focused .a-content{
     opacity:1;
     filter: blur(0px);
 }
