modified article template

--- a/app/modules/templates.jade
+++ b/app/modules/templates.jade
@@ -31,8 +31,7 @@
                         time(pubdate="pubdate", title="{{ago}}") &nbsp;{{pubdate}}
                     .a-content
                         .timeline-heading
-                          h2.timeline-title
-                            a(href="{{link}}") {{{title}}}
+                          h2.timeline-title {{{title}}}
 
                         .timeline-body
                             .body-snippet
